<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ProgressBar
        android:id="@+id/load_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>
    <LinearLayout
        android:id="@+id/ly_login_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="22dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/blue_dark"
            android:src="@drawable/profile" />
        <EditText
            android:id="@+id/ed_login_email"
            android:transitionName="email"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_string" />
        <TextView
            android:id="@+id/tv_email_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email_string"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <com.example.storyappsubmission2.customview.EditPass
            android:id="@+id/ed_login_password"
            android:transitionName="password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="62dp"
            android:hint="@string/password_string"/>
        <TextView
            android:id="@+id/tv_password_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/password_string"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_string" />
        <Button
            android:id="@+id/btn_create_account"
            android:transitionName="regbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_string" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>