<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="15dp"
    tools:context=".activity.RegisterActivity">

    <ProgressBar
        android:id="@+id/load_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_register_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/blue_dark"
                android:src="@drawable/profile" />

            <EditText
                android:id="@+id/ed_register_name"
                android:transitionName="name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name_string"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_name_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/red"
                android:visibility="visible" />

            <EditText
                android:id="@+id/ed_register_email"
                android:transitionName="email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tv_email_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/red"
                android:visibility="visible" />

            <com.example.storyappsubmission2.customview.EditPass
                android:id="@+id/ed_register_password"
                android:transitionName="password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password_string"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_password_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/red"
                android:visibility="visible" />

            <com.example.storyappsubmission2.customview.EditPass
                android:id="@+id/ed_register_password_confirmation"
                android:transitionName="password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/confirm_password_string"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_password2_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/red"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_register"
                android:transitionName="regbutton"
                android:layout_width="162dp"
                android:layout_height="82dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_string" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>